--- a/index.html
+++ b/index.html
@@ -1,63 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
-   <head>
-      <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-      <link rel="stylesheet" type="text/css" href="css/style.css">
-      <script src="js/jquery-2.1.3.min.js"></script>
-      <script src="js/bootstrap.min.js"></script>
-      <script src="js/sha.js"></script>
-      <script src="js/core.js"></script>
 
-      <title>
-      	TOTP Tester
-      </title>
-   </head>
-   <body>
-      <div class="panel panel-default center timerContainer">
-         <div class="panel-body">
-            <!-- OTP -->
-            <div class="otp">
-               <h1>
-                  <div class="input">
-                     <span id='otp'></span>
-                  </div>
-               </h1>
+<html lang="en">
+<head>
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-2.1.3.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/sha.js"></script>
+    <script src="js/core.js"></script>
+
+    <title>otp.ninja</title>
+</head>
+
+<body>
+    <div class="panel panel-default center timerContainer">
+        <div class="panel-body">
+            <div class="center" id="header">
+            	<image id="icon" src="images/otpninja.png">
             </div>
+
+      			<!-- OTP -->
+            <div class="otp">
+                <h1></h1>
+
+                <div class="input">
+                    <h1><span id='otp'></span> </h1>
+                </div>
+            </div>
+
             <!-- Timer -->
             <div class="timer">
-               <h2>
-                  <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
-                  <span id='updatingIn'></span>
-               </h2>
+                <h2>
+                	<span class="glyphicon glyphicon-time"></span>
+                	<span id='updatingIn'></span>
+              	</h2>
             </div>
-            </section>
             <hr>
+
             <!-- Forms -->
-            <div class="inputForms">
-               <div class="input-group">
-                  <div class="input-group-btn">
-                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                     Base32
-                     <span class="caret"></span>
-                     </button>
-                     <ul class="dropdown-menu pull-left">
-                        <li><a data-value="base32">Base32</a></li>
-                        <li><a data-value="hex">HEX</a></li>
-                     </ul>
-                  </div>
-                  <input type="text" class="form-control" aria-label="..." value="JBSWY3DPEHPK3PXP" id="secret">
-               </div>
-               <!-- /input-group -->
+            <div id="OTPLength" class="contentSection">
+                <div class="titleLabel">
+                    <span class="label label-default">OTP Length</span><br>
+                </div>
+
+                <div class="btn-group">
+                    <button class="btn btn-default otpLength" type=
+                    "button">6</button> <button class=
+                    "btn btn-default otpLength active" type="button">8</button>
+                </div>
             </div>
+
+            <div class="inputForms contentSection">
+                <div class="titleLabel">
+                    <span class="label label-default">Secret</span>
+                </div>
+
+                <div class="input-group">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default dropdown-toggle"
+                        data-toggle="dropdown" type="button">Base32
+                        <span class="caret"></span></button>
+
+                        <ul class="dropdown-menu pull-left">
+                            <li>
+                                <a data-value="base32">Base32</a>
+                            </li>
+
+                            <li>
+                                <a data-value="hex">HEX</a>
+                            </li>
+                        </ul>
+                    </div><input class="form-control" id="secret" type="text"
+                    value="JBSWY3DPEHPK3PXP">
+                </div>
+            </div><span class="label label-default">QR Code</span>
+
             <div class="qrCode row center">
-               <div class="input">
-                  <img id="qrImg" src="" />
-               </div>
+                <div class="input"><img id="qrImg" src=""></div>
             </div>
-         </div>
-      </div>
-      <div id="footer" class="center">
-				<span><a href="http://jonfriesen.ca">Jon Friesen &copy; 2015</a>
-		</div>
-   </body>
+        </div>
+    </div>
+
+    <div class="center" id="footer">
+        <span><a href="http://jonfriesen.ca">Jon Friesen &copy; 2015</a></span>
+    </div>
+</body>
 </html>
