--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/sha.js"></script>
     <script src="js/core.js"></script>
-
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <title>otp.ninja</title>
 </head>
 
