Added customizable window size

--- a/index.html
+++ b/index.html
@@ -39,15 +39,28 @@
             <hr>
 
             <!-- Forms -->
-            <div id="OTPLength" class="contentSection">
-                <div class="titleLabel">
-                    <span class="label label-default">OTP Length</span><br>
-                </div>
+            <div id="OTPParams" class="contentSection">
+                <div id="OTPLength">
+                    <div class="titleLabel">
+                        <span class="label label-default">OTP Length</span>
+                    </div>
 
-                <div class="btn-group">
-                    <button class="btn btn-default otpLength" type=
-                    "button">6</button> <button class=
-                    "btn btn-default otpLength active" type="button">8</button>
+                    <div class="btn-group">
+                        <button class="btn btn-default otpLength" type=
+                        "button">6</button> <button class=
+                        "btn btn-default otpLength active" type="button">8</button>
+                    </div>
+                </div>
+                <div id="OTPWindow">
+                    <div class="titleLabel">
+                        <span class="label label-default">OTP Window</span>
+                    </div>
+
+                    <div class="btn-group">
+                        <button class="btn btn-default otpWindow active" type="button">30</button>
+                        <button class="btn btn-default otpWindow" type="button">45</button>
+                        <button class="btn btn-default otpWindow" type="button">60</button>
+                    </div>
                 </div>
             </div>
 
