Added a more realistic default secret

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             </li>
                         </ul>
                     </div><input class="form-control" id="secret" type="text"
-                    value="JBSWY3DPEHPK3PXP">
+                    value="FLS5AJRNEQ6IODOCY3N4E5SY6DORTNGL">
                 </div>
             </div><span class="label label-default">QR Code</span>
 
