--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 	
 	<title>OTP Ninja</title>
 
-	<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+	<link rel='stylesheet' href='/inter/inter.css'>
 	<link rel='icon' type='image/png' href='/favicon.ico'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
