--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
 	<title>OTP Ninja</title>
 
 	<link rel='stylesheet' href='/inter/inter.css'>
-	<link rel='icon' type='image/png' href='/favicon.ico'>
+	<link rel='icon' type='image/png' href='/logo.png'>
+	<link rel='stylesheet' href='/build/extra.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
 	<script defer src='/build/bundle.js'></script>
